# robotica_fernando

./: README.md
examen_ws/install/: local_setup.sh  setup.sh
examen_ws/install/ejer1_py/lib/ejer1_py/: publicador  suscriptor
examen_ws/install/ejer1_py/share/ejer1_py/: package.bash  package.dsv  package.ps1  package.sh  (+1 more)
examen_ws/log/: latest_build  latest_list
examen_ws/src/ejer1_py/: package.xml  setup.cfg  setup.py
examen_ws/src/ejer1_py/ejer1_py/: publicador.py
examen_ws/src/ejer2_py/: setup.cfg  setup.py
examen_ws/src/ejer3_py/: setup.cfg  setup.py
examen_ws/src/ejer3_py/ejer3_py/: cliente.py  servidor.py
examen_ws/src/examen_interface/: CMakeLists.txt
practicasros_ws/install/: local_setup.sh  setup.sh
practicasros_ws/log/: latest_build  latest_list
practicasros_ws/src/ejercicio2/: package.xml  setup.cfg  setup.py
practicasros_ws/src/ejercicio2/ejercicio2/: nodo3.py
practicasros_ws/src/ejercicio2_cpp/: CMakeLists.txt
practicasros_ws/src/ejercicio2_cpp/src/: nodo1.cpp  nodo2.cpp  nodo3.cpp
practicasros_ws/src/ejercicio3/: package.xml  setup.cfg  setup.py
practicasros_ws/src/ejercicio3/ejercicio3/: client.py
practicasros_ws/src/ejercicio3_cpp/: CMakeLists.txt  package.xml
practicasros_ws/src/ejercicio3_cpp/src/: client.cpp  service.cpp
practicasros_ws/src/practica1/: setup.cfg  setup.py
practicasros_ws/src/practica1/practica1/: nodo1.py
practicasros_ws/src/practica1_cpp/: CMakeLists.txt  package.xml
practicasros_ws/src/practica1_cpp/src/: nodo1.cpp  nodo2.cpp  nodo3.cpp
practicasros_ws/src/recursos/: CMakeLists.txt
(+165 files in other folders)
